--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=compra_certa_api
+# DB_DATABASE=no_precinho
 # DB_USERNAME=
 # DB_PASSWORD=
 
